--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -43,6 +43,7 @@
 	href="js/angular-material/themes/light-green-theme.css">
 <link rel="stylesheet" href="js/angular-material/themes/lime-theme.css">
 
+<link href="css/autocomplete.css" rel="stylesheet">
 <script src="js/angular/angular.js"></script>
 <script src="js/bootstrap/ui-bootstrap-tpls-0.12.0.js"></script>
 <link href="css/bootstrap.css" rel="stylesheet">
