--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -418,39 +418,20 @@
 			MovieRetriever.getmovies = function(i) {
 				var moviedata = $q.defer();
 				var movies;
-
-				var someMovies = [ "The Wolverine", "The Smurfs 2",
-						"The Mortal Instruments: City of Bones",
-						"Drinking Buddies", "All the Boys Love Mandy Lane",
-						"The Act Of Killing", "Red 2", "Jobs", "Getaway",
-						"Red Obsession", "2 Guns", "The World's End", "Planes",
-						"Paranoia", "The To Do List", "Man of Steel" ];
-
-				var moreMovies = [ "The Wolverine", "The Smurfs 2",
-						"The Mortal Instruments: City of Bones",
-						"Drinking Buddies", "All the Boys Love Mandy Lane",
-						"The Act Of Killing", "Red 2", "Jobs", "Getaway",
-						"Red Obsession", "2 Guns", "The World's End", "Planes",
-						"Paranoia", "The To Do List", "Man of Steel",
-						"The Way Way Back", "Before Midnight",
-						"Only God Forgives", "I Give It a Year", "The Heat",
-						"Pacific Rim", "Pacific Rim",
-						"Kevin Hart: Let Me Explain", "A Hijacking", "Maniac",
-						"After Earth", "The Purge", "Much Ado About Nothing",
-						"Europa Report", "Stuck in Love",
-						"We Steal Secrets: The Story Of Wikileaks",
-						"The Croods", "This Is the End", "The Frozen Ground",
-						"Turbo", "Blackfish", "Frances Ha", "Prince Avalanche",
-						"The Attack", "Grown Ups 2", "White House Down",
-						"Lovelace", "Girl Most Likely", "Parkland", "Passion",
-						"Monsters University", "R.I.P.D.", "Byzantium",
-						"The Conjuring", "The Internship" ]
-
-				if (i && i.indexOf('T') != -1)
-					movies = moreMovies;
-				else
-					movies = moreMovies;
-
+				
+				$http({
+					method : 'GET',
+					url : 'http://localhost:8080/solr-4.10.2/suggest?q=' + i + '&wt=json&indent=true',
+					headers : {
+						'Content-Type' : 'application/text'
+					}
+				}).success(function(data) {
+					var suggestions = data.spellcheck.suggestions;
+					var finalList = suggestions[1].suggestion;
+					console.log(data);
+					movies = finalList;
+				});
+				
 				$timeout(function() {
 					moviedata.resolve(movies);
 				}, 1000);
