--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -122,8 +122,8 @@
 							publishedDate : results[i].publishedDate,
 							content : results[i].content,
 							snippet : results[i].snippet,
-							popularityScore : results[i].popularityScore
-						//documentRating : results[i].rating
+							popularityScore : results[i].popularityScore,
+							documentRating : results[i].rating
 						});
 					}
 				}
@@ -147,8 +147,8 @@
 			console.log(tab);
 			$scope.data.selectedIndex = tab;
 			if (tab == 0) {
-				$scope.theme = 'teal';
-				$scope.nonThemed = '#009688'
+				$scope.theme = 'green';
+				$scope.nonThemed = '#259b24';
 
 				$http(
 						{
@@ -156,28 +156,26 @@
 							url : 'http://localhost:8080/UB535p3WebApp/TopNews',
 							headers : {
 								'Content-Type' : 'application/text',
-							},
-							data : $scope.user
+							}
 						}).success(function(data) {
-					$scope.status = data;
-					console.log(data);
-					var resultCount = data.resultCount;
-					var results = data.results;
-					if (resultCount != 0) {
-						for (var i = 0; i < results.length; i++) {
-							$scope.topNewsCards.push({
-								id : results[i].id,
-								title : results[i].title,
-								publishedDate : results[i].publishedDate,
-								content : results[i].content,
-								snippet : results[i].snippet,
-								documentRating : results[i].rating,
-								popularityScore : results[i].popularityScore
-							});
-						}
-					}
-				});
-
+							$scope.status = data;
+							console.log(data);
+							var resultCount = data.resultCount;
+							var results = data.results;
+							if (resultCount != 0) {
+								for (var i = 0; i < results.length; i++) {
+									$scope.topNewsCards.push({
+										id : results[i].id,
+										title : results[i].title,
+										publishedDate : results[i].publishedDate,
+										content : results[i].content,
+										snippet : results[i].snippet,
+										popularityScore : results[i].popularityScore,
+										documentRating : results[i].rating
+									});
+								}
+							}
+						});
 			}
 			else if (tab == 1) {
 				$scope.theme = 'teal';
@@ -499,7 +497,7 @@
 
 
 					<div role="tabpanel" id="tab1-content" aria-labelledby="tab1"
-						ng-swi ch-when="1" md-swipe-left="next()"
+						ng-switch-when="0" md-swipe-left="next()"
 						md-swipe-right="previous()">
 						<md-card ng-repeat="card in topNewsCards"
 							md-theme-watch="true"
@@ -523,9 +521,8 @@
 						</div>
 						</md-card>
 					</div>
-
 					<div role="tabpanel" id="tab2-content" aria-labelledby="tab2"
-						ng-swi ch-when="1" md-swipe-left="next()"
+						ng-switch-when="1" md-swipe-left="next()"
 						md-swipe-right="previous()">
 						<md-card ng-repeat="card in personalizedCards"
 							md-theme-watch="true"
@@ -661,7 +658,7 @@
 		<div style="width: 25%; height: 100%;">
 			<md-toolbar md-theme="{{theme}}">
 			<div class="md-toolbar-tools">
-				<span class="md-flex">Recommended News</span>
+				<span class="md-flex">RECOMMENDED NEWS</span>
 			</div>
 			</md-toolbar>
 			<md-content class="md-padding" style="height: 100%">
