--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -290,6 +290,30 @@
 				console.log(data);
 				$scope.categoriesAndLikeScoreMap = data.results;
 			});
+
+			$http({
+				method : 'POST',
+				url : 'http://localhost:8080/UB535p3WebApp/PreferredSources',
+				headers : {
+					'Content-Type' : 'application/text',
+					'userId' : $scope.loginUser
+				},
+				data : $scope.preferredSources
+			}).success(function(data) {
+				$scope.status = data;
+				console.log(data);
+				var resultCount = data.resultCount;
+				var results = data.results;
+				if (resultCount != 0) {
+					for (var i = 0; i < results.length; i++) {
+						$scope.preferredSources.push({
+							name : results[i].name,
+							check : results[i].check
+						});
+					}
+				}
+			});
+
 			$mdSidenav('userPreferencesSideNav').toggle()
 		};
 		$scope.closePreferences = function() {
@@ -300,6 +324,12 @@
 						+ $scope.categoriesAndLikeScoreMap[i].category + ':'
 						+ $scope.categoriesAndLikeScoreMap[i].likingScore + ','
 			}
+			var updatedSourceWithCheckValues = '';
+			for (var i = 0; i < $scope.preferredSources.length; i++) {
+				updatedSourceWithCheckValues = updatedSourceWithCheckValues
+						+ $scope.preferredSources[i].name + ':'
+						+ $scope.preferredSources[i].check + ','
+			}
 			$http(
 					{
 						method : 'POST',
@@ -307,7 +337,8 @@
 						headers : {
 							'Content-Type' : 'application/text',
 							'userId' : $scope.loginUser,
-							'categoriesAndLikeScoreMap' : stringToSend
+							'categoriesAndLikeScoreMap' : stringToSend,
+							'updatedSourceWithCheckValues' : updatedSourceWithCheckValues
 						},
 						data : $scope.categoriesAndLikeScoreMap
 					}).success(function(data) {
@@ -346,6 +377,7 @@
 		};
 
 		$scope.cards = [];
+		$scope.preferredSources = []
 		$scope.personalizedCards = [];
 		$scope.topNewsCards = [];
 		$scope.categoriesAndLikeScoreMap = [];
@@ -858,7 +890,17 @@
 				</div>
 
 			</div>
-			<p style="padding-left: 15px; padding-top: 100px;">
+			<div>
+				<p
+					style="padding-left: 15px; margin-top: 10px; font-weight: bold; font-size: 14px">Preferred
+					Sources</p>
+				<div ng-repeat="source in preferredSources">
+					<md-checkbox ng-model="source.check" aria-label="source.name"
+						id="sourceCheck"> {{source.name}} </md-checkbox>
+				</div>
+
+			</div>
+			<p style="padding-left: 15px; padding-top: 15px;">
 				<md-button ng-click="closePreferences ()" class="md-raised">
 				UPDATE </md-button>
 			</p>
