--- a/WebContent/spellChecker.html
+++ b/WebContent/spellChecker.html
@@ -2,7 +2,7 @@
 
   <md-content>
    <section layout="row" layout-phone="column" layout-align="center center">
-	<p style="font-weight:100; font-size:48px;">Who da fuck are you ?</p>
+	<p style="font-weight:100; font-size:48px;">No results! Choose alternatives:</p>
     </section>
     
    <section layout="row" layout-phone="column" layout-align="center center">
