--- a/WebContent/userSelectionDialog.html
+++ b/WebContent/userSelectionDialog.html
@@ -2,7 +2,7 @@
 
   <md-content>
    <section layout="row" layout-phone="column" layout-align="center center">
-	<p style="font-weight:100; font-size:48px;">Who da fuck are you ?</p>
+	<p style="font-weight:100; font-size:48px;">Please login ?</p>
     </section>
     
    <section layout="row" layout-phone="column" layout-align="center center">
@@ -11,10 +11,6 @@
 	    </md-button>
     </section>
     
-   <section layout="row" layout-phone="column" layout-align="center center">
-    	<md-text-float label="New User ?" ng-model="newUserName"  md-theme="red"> </md-text-float>
-      <md-button  ng-click="newUser (newUserName)">Come on in!</md-button>
-    </section>
   </md-content>
 
 </md-dialog>
