--- a/WebContent/viewArticle.html
+++ b/WebContent/viewArticle.html
@@ -4,7 +4,7 @@
 <div class="md-toolbar-tools">
 	<span class="md-flex" style="padding-left: 50px;">{{card.title}}</span>
 	<span flex></span>
-	<span class="md-flex" style="padding-right: 50px;">Sourca: {{card.source}}</span>
+	<span class="md-flex" style="padding-right: 50px;">Source: {{card.source}}</span>
 </div>
 </md-toolbar>
 <p style="font-weight: 300; font-size: 12px; padding-left: 50px;
