--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -178,7 +178,130 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 														}
 													})
 											.then(
-													function(choice) {
+													function(user) {
+														console.log(user);
+														$http(
+																{
+																	method : 'POST',
+																	url : 'http://localhost:8080/UB535p3WebApp/BasicEvaluator',
+																	headers : {
+																		'Content-Type' : 'application/text',
+																		'q' : user
+																	},
+																	data : $scope.user
+																})
+																.success(
+																		function(
+																				data) {
+																			console
+																					.log(data);
+																			var resultCount = data.resultCount;
+																			var results = data.results;
+																			if (resultCount != 0) {
+																				for (var i = 0; i < results.length; i++) {
+																					$scope.cards
+																							.push({
+																								id : results[i].id,
+																								title : results[i].title,
+																								publishedDate : results[i].publishedDate,
+																								content : results[i].content,
+																								snippet : results[i].snippet,
+																								popularityScore : results[i].popularityScore,
+																								documentRating : results[i].rating,
+																								source : results[i].source
+																							});
+																				}
+																			}
+																		});
+
+													},
+													function() {
+														$scope.alert = 'You cancelled the dialog.';
+													});
+								}
+
+								$scope.announceSelected(2);
+							});
+		};
+
+		$scope.query2 = function(pol) {
+			
+			
+			$scope.recos = [];
+
+			$http({
+				method : 'GET',
+				url : 'http://localhost:8080/UB535p3WebApp/RecommendedNews',
+				headers : {
+					'Content-Type' : 'application/text',
+				}
+			}).success(function(data) {
+				$scope.status = data;
+				console.log(data);
+				var resultCount = data.resultCount;
+				var results = data.results;
+				if (resultCount != 0) {
+					for (var i = 0; i < results.length; i++) {
+						$scope.recos.push({
+							id : results[i].id,
+							title : results[i].title,
+							publishedDate : results[i].publishedDate,
+							content : results[i].content,
+							snippet : results[i].snippet,
+							popularityScore : results[i].popularityScore,
+							documentRating : results[i].rating,
+							source : results[i].source
+						});
+					}
+				}
+			});
+			
+			
+			
+			
+			$scope.cards = [];
+			$http({
+				method : 'POST',
+				url : 'http://localhost:8080/UB535p3WebApp/BasicEvaluator',
+				headers : {
+					'Content-Type' : 'application/text',
+					'q' : pol
+				},
+				data : $scope.user
+			})
+					.success(
+							function(data) {
+								console.log(data);
+								var resultCount = data.resultCount;
+								var results = data.results;
+								if (resultCount != 0) {
+									for (var i = 0; i < results.length; i++) {
+										$scope.cards
+												.push({
+													id : results[i].id,
+													title : results[i].title,
+													publishedDate : results[i].publishedDate,
+													content : results[i].content,
+													snippet : results[i].snippet,
+													popularityScore : results[i].popularityScore,
+													documentRating : results[i].rating,
+													source : results[i].source
+												});
+									}
+								} else {
+									var spells = data.spellCorrections;
+									$mdDialog
+											.show(
+													{
+														controller : Dialog2Controller,
+														templateUrl : 'spellChecker.html',
+														targetEvent : null,
+														locals : {
+															choices : spells
+														}
+													})
+											.then(
+													function(loginUser) {
 														console.log(choice);
 														$http(
 																{
@@ -224,6 +347,7 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 							});
 		};
 
+		
 		$scope.next = function() {
 			$scope.data.selectedIndex = Math.min($scope.data.selectedIndex + 1,
 					2);
@@ -277,6 +401,7 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 				$scope.theme = 'green';
 				$scope.nonThemed = '#259b24';
 
+				$scope.topNewsCards = [];
 				$http({
 					method : 'POST',
 					url : 'http://localhost:8080/UB535p3WebApp/TopNews',
@@ -307,6 +432,7 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 				$scope.theme = 'teal';
 				$scope.nonThemed = '#009688'
 
+					$scope.personalizedCards = [];
 				$http(
 						{
 							method : 'POST',
@@ -419,6 +545,7 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 				$scope.status = data;
 				console.log(data);
 			});
+			announceSelected(0);
 		};
 
 		$scope.showArticle = function($event, $cardo) {
@@ -453,7 +580,7 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 		
 		$scope.recos = [];
 		$scope.cards = [];
-		$scope.preferredSources = []
+		$scope.preferredSources = [];
 		$scope.personalizedCards = [];
 		$scope.topNewsCards = [];
 		$scope.categoriesAndLikeScoreMap = [];
@@ -571,7 +698,12 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 
 		$scope.updateUser = function(currentUser) {
 			console.log(currentUser);
-
+			$scope.recos = [];
+			$scope.cards = [];
+			$scope.preferredSources = [];
+			$scope.personalizedCards = [];
+			$scope.topNewsCards = [];
+			$scope.queryText = '';
 			$http({
 				method : 'POST',
 				url : 'http://localhost:8080/UB535p3WebApp/UserLogin',
@@ -584,6 +716,7 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 				$scope.status = data;
 				console.log(data);
 			});
+			announceSelected(0);
 		}
 
 		$scope.movies = MovieRetriever.getmovies("...");
@@ -623,6 +756,9 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 		select_dialect.selectedIndex = 6;
 		showInfo('info_start');
 		function updateCountry() {		}
+		$scope.checki1 = 1;
+		$scope.checki2 = 0;
+		$scope.checki3 = 0;
 	var create_email = false;
 	$scope.final_transcript = '';
 	var recognizing = false;
@@ -1013,7 +1149,7 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 			<md-toolbar class="md-theme-light">
 			<h1 class="md-toolbar-tools">UPDATE USER PREFERENCES</h1>
 			</md-toolbar>
-			<div>
+			<div style="padding-right:20px;">
 
 				<div ng-repeat="categoryLikeScore in categoriesAndLikeScoreMap"
 					layout>
@@ -1026,7 +1162,7 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 
 					<md-slider md-discrete="" md-theme="blue" flex
 						class="ng-pristine ng-valid ng-isolate-scope md-blue-theme ng-touched"
-						ng-model="categoryLikeScore.likingScore" tabindex="0"
+						ng-model="categoryLikeScore.likingScore" tabindex="0" style="padding-right:20px;"
 						role="slider" aria-valuemin="0" aria-valuemax="9" step="1" min="0"
 						max="9" aria-label="liking" id="blue-slider" role="slider"
 						aria-valuenow="3" aria-invalid="false"> </md-slider>
@@ -1038,9 +1174,13 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 				<p
 					style="padding-left: 15px; margin-top: 10px; font-weight: bold; font-size: 14px">Preferred
 					Sources</p>
-				<div ng-repeat="source in preferredSources">
-					<md-checkbox ng-model="source.check" aria-label="source.name"
-						id="sourceCheck"> {{source.name}} </md-checkbox>
+				<div>
+					<md-checkbox ng-model="$scope.checki1" aria-label="source.name"
+						id="sourceCheck"> The New York Times </md-checkbox>
+					<md-checkbox ng-model="$scope.checki2" aria-label="source.name"
+						id="sourceCheck"> Reuters </md-checkbox>
+					<md-checkbox ng-model="$scope.checki3" aria-label="source.name"
+						id="sourceCheck"> Wikinews </md-checkbox>
 				</div>
 
 			</div>
