Added category in article.

--- a/WebContent/viewArticle.html
+++ b/WebContent/viewArticle.html
@@ -4,6 +4,7 @@
 <div class="md-toolbar-tools">
 	<span class="md-flex" style="padding-left: 50px;">{{card.title}}</span>
 	<span flex></span>
+	<span class="md-flex" style="padding-right: 10px;">Category: {{card.category}}</span>
 	<span class="md-flex" style="padding-right: 50px;">Source: {{card.source}}</span>
 </div>
 </md-toolbar>
