--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -127,7 +127,8 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 							snippet : results[i].snippet,
 							popularityScore : results[i].popularityScore,
 							documentRating : results[i].rating,
-							source : results[i].source
+							source : results[i].source,
+							category : results[i].category
 						});
 					}
 				}
@@ -162,7 +163,8 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 													snippet : results[i].snippet,
 													popularityScore : results[i].popularityScore,
 													documentRating : results[i].rating,
-													source : results[i].source
+													source : results[i].source,
+													category : results[i].category
 												});
 									}
 								} else {
@@ -208,7 +210,8 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 																								snippet : results[i].snippet,
 																								popularityScore : results[i].popularityScore,
 																								documentRating : results[i].rating,
-																								source : results[i].source
+																								source : results[i].source,
+																								category : results[i].category
 																							});
 																				}
 																			}
@@ -250,7 +253,8 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 							snippet : results[i].snippet,
 							popularityScore : results[i].popularityScore,
 							documentRating : results[i].rating,
-							source : results[i].source
+							source : results[i].source,
+							category : results[i].category
 						});
 					}
 				}
@@ -285,7 +289,8 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 													snippet : results[i].snippet,
 													popularityScore : results[i].popularityScore,
 													documentRating : results[i].rating,
-													source : results[i].source
+													source : results[i].source,
+													category : results[i].category
 												});
 									}
 								} else {
@@ -331,7 +336,8 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 																								snippet : results[i].snippet,
 																								popularityScore : results[i].popularityScore,
 																								documentRating : results[i].rating,
-																								source : results[i].source
+																								source : results[i].source,
+																								category : results[i].category
 																							});
 																				}
 																			}
@@ -386,7 +392,8 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 							snippet : results[i].snippet,
 							popularityScore : results[i].popularityScore,
 							documentRating : results[i].rating,
-							source : results[i].source
+							source : results[i].source,
+							category : results[i].category
 						});
 					}
 				}
@@ -423,7 +430,8 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 								snippet : results[i].snippet,
 								popularityScore : results[i].popularityScore,
 								documentRating : results[i].rating,
-								source : results[i].source
+								source : results[i].source,
+								category : results[i].category
 							});
 						}
 					}
@@ -455,7 +463,8 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 								content : results[i].content,
 								snippet : results[i].snippet,
 								documentRating : results[i].rating,
-								source : results[i].source
+								source : results[i].source,
+								category : results[i].category
 							});
 						}
 					}
@@ -648,7 +657,8 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 										snippet : results[i].snippet,
 										popularityScore : results[i].popularityScore,
 										documentRating : results[i].rating,
-										source : results[i].source
+										source : results[i].source,
+										category : results[i].category
 									});
 								}
 							}
@@ -677,7 +687,8 @@ http://stackoverflow.com/questions/15519713/highlighting-a-filtered-result-in-an
 										snippet : results[i].snippet,
 										popularityScore : results[i].popularityScore,
 										documentRating : results[i].rating,
-										source : results[i].source
+										source : results[i].source,
+										category : results[i].category
 									});
 								}
 							}
