--- a/WebContent/userSelectionDialog.html
+++ b/WebContent/userSelectionDialog.html
@@ -1,4 +1,4 @@
-<md-dialog aria-label="Mango (Fruit)">
+<md-dialog aria-label="">
 
   <md-content>
    <section layout="row" layout-phone="column" layout-align="center center">
